fix overflowing elements in flex boxes

--- a/src/css/components/CardList.css
+++ b/src/css/components/CardList.css
@@ -12,7 +12,7 @@
 	display: flex;
 	flex-wrap: nowrap;
 	overflow: hidden;
-	height: 100% !important;
+	height: 100%;
 }
 
 .SlidingContainerBacklog{
